Small refactor in integration tests
- Improving the PTE integration test and make the port not fixed
- Refactors in the integration tests to make it more reliable